--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,10 @@ services:
     restart: always
     ports:
       - "8080:8080"
+      - "8099:8099"
+    expose:
+      - "8080"
+      - "8099"
     networks:
       - postgres
     depends_on:
