add roles and permissions and create default entities

--- a/.env
+++ b/.env
@@ -7,3 +7,8 @@ CGO_ENABLED=0
 DB_USERNAME=admin
 DB_PASSWORD=23or9vFvW7yXzC6J5kL0pQ2sE8uH3jN1
 DB_NAME=auth_example
+
+SUPERUSER_LOGIN=admin
+SUPERUSER_EMAIL=example@gmail.com
+SUPERUSER_PASSWORD=23tF32g$f3$2f3JJ0131cweD31f
+SUPERUSER_ROLE=admin
